Critical bugfix: Can now insert text without breaking div alignment

--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,8 @@ html {
 }
 div {
   /*border: 1px solid black;*/
-  margin: 0;
-  padding: 0;
-  line-height: 0;
+  /*margin: 0;*/
+  /*padding: 0;*/
 }
 #main-container{
   margin: auto 0;
@@ -29,6 +28,7 @@ div {
   height: 80px;
   border: 1px solid #000;
   border-radius: 40px;
+  vertical-align: top;
 }
 .mancala {
   display: inline-block;
@@ -36,4 +36,5 @@ div {
   height: 160px;
   border: 1px solid #000;
   border-radius: 40px;
+  vertical-align: top;
 }
